# bigmama

./: CMakeLists.txt
docs/: topics.txt
src/: AlsaMidiInput.cpp  AudioOutput.cpp  AudioOutput.h  Options.cpp  Options.h  SimpleSynth.cpp  SimpleSynth.h  Synth.cpp  Synth.h  TestMidiInput.cpp  TestMidiInput.h  Types.h  main.cpp
